--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,7 +87,7 @@ h1 {
 /* Portfolio Section */
 
 #portfolio {
-  background-color: lightblue;
+  /*background-color: lightblue;*/
 }
 
 .col-sm-4 {
@@ -103,7 +103,7 @@ h1 {
 #portfolio a {
   color: red;
   text-shadow: 1px 1px 2px lightslategray;
-  background-color: gold;
+  /*background-color: gold;*/
   font-size: 1.25em;
   font-weight: 600;
   border-radius: 5px;
