--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -64,7 +64,7 @@ h1 {
   align-content: center;
   justify-content: center;
   width: 30%;
-  height: auto;
+  height: 50%;
   border: 3px groove gold;
   margin: 1.5rem;
   border-radius: 50px;
