--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,7 +101,7 @@ h1 {
 }
 
 #portfolio a {
-  color: red;
+  color: #ffca28;
   text-shadow: 1px 1px 2px lightslategray;
   /*background-color: gold;*/
   font-size: 1.25em;
