--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -71,7 +71,7 @@ h1 {
 }
 
 .btn {
-  background-color: red;
+  background-color: #c79a00;
   font-style: normal;
   font-weight: bolder;
   letter-spacing: 2px;
