--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,15 +45,15 @@ h1 {
 
 .jumbotron p {
   display: flex;
-  background-color: lightblue;
+  background-color: #6ff9ff;
   opacity: 0.3;
-  font-size: 1.5rem;
-  font-weight: bolder;
+  font-size: 1.7rem;
+  font-weight: bold;
   font-style: italic;
   border-radius: 5px;
   justify-content: center;
   align-content: center;
-  text-shadow: 2px 2px 3px white;
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
   font-family: serif;
   padding: 0.5rem;
   margin-bottom: 0;
