--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,6 +46,7 @@ h1 {
 .jumbotron p {
   display: flex;
   background-color: #fffd61;
+  color: #0095a8;
   opacity: 0.8;
   font-size: 1.7rem;
   font-weight: bold;
