--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 div, section {
-  border: 1px outset #fffd61;
+  /*border: 1px outset #fffd61;*/
 }
 
 a {
@@ -20,7 +20,7 @@ h1 {
 /* Navbar Section */
 
 .navbar {
-  margin-bottom: 0;
+  margin: 0 auto;
 }
 
 .navbar-nav {
